--- a/exercise2.html
+++ b/exercise2.html
@@ -9,9 +9,9 @@
     <meta name="author" content="Kiia Kuokkala">
 
     <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="aboutus.html">About us</a></li>
-        <li><a href="projects.html">Projects</a></li>
+        <li><a href="index.html" target="_blank">Home</a></li>
+        <li><a href="aboutus.html" target="_blank">About us</a></li>
+        <li><a href="projects.html" target="_blank">Projects</a></li>
     </ul>
 
     <title>Kiia Kuokkala – Exercise 2</title>
