--- a/exercise1.html
+++ b/exercise1.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="fi">
 <head>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Exercise 1</title>
 </head>
 <body>
     <img src="assets/images/hamkinlogo.png" alt="hamkinlogo;">
@@ -21,19 +22,19 @@
     </ul>
 
     <h1>Hakuaika ammatillisiin opettajankoulutuksiin on alkanut 3.1.2023</h1>
-    <p>03.01.2023 08:01</p>
-    <h2>Haku ammatillisiin opettajankoulutuksiin on alkanut 3.1. kello 8.00 osoitteessa <a href="https://opintopolku.fi/konfo/fi/" target="_blank">opintopolku.fi</a>. Hakuaika päättyy torstaina 19.1.2023 kello 15.00.</h2>
+    <p> 03.01.2023 08:01</p>
+    <h2 id="haku" >Haku ammatillisiin opettajankoulutuksiin on alkanut 3.1. kello 8.00 osoitteessa <a href="https://opintopolku.fi/konfo/fi/" target="_blank">opintopolku.fi</a>. Hakuaika päättyy torstaina 19.1.2023 kello 15.00.</h2>
 
     <p><em>HAMK Ammatillinen opettajakorkeakoulu tarjoaa ammatillista opettajankoulutusta, erityisopettajankoulutusta ja opinto-ohjaajankoulutusta.</em></p>
 
-    <h3>Ammatillinen opettajankoulutus</h3>
-        <p><img src="assets/images/oppilaat.jpg" alt="oppilaat;" style="float:right; margin-right: 15px;">Opinnot on mahdollista suorittaa työn ohessa <strong>monimuoto-opiskeluna tai verkko-opiskeluna.</strong> Monimuoto-opiskelua toteutetaan Hämeenlinnassa, Espoossa, Lahdessa ja Turussa, sekä tekniikan alojen opetukseen suuntautuen Hämeenlinnassa ja Vaasan alueella. Opinnot voi tehdä myös täysin verkko-opintoina suomen tai englannin kielellä. Lisäksi tarjoamme suomenkielistä erillisvalintaryhmää niille hakijoille, jotka ovat suorittaneet opettajankoulutuksen ulkomailla.</p>
+    <h3 id="h3opettaja" >Ammatillinen opettajankoulutus</h3>
+        <p><img src="assets/images/oppilaat.jpg" alt="oppilaat;" style="float:right; margin-right: 15px; margin-left: 25px; margin-bottom: 90px;">Opinnot on mahdollista suorittaa työn ohessa <strong>monimuoto-opiskeluna tai verkko-opiskeluna.</strong> Monimuoto-opiskelua toteutetaan Hämeenlinnassa, Espoossa, Lahdessa ja Turussa, sekä tekniikan alojen opetukseen suuntautuen Hämeenlinnassa ja Vaasan alueella. Opinnot voi tehdä myös täysin verkko-opintoina suomen tai englannin kielellä. Lisäksi tarjoamme suomenkielistä erillisvalintaryhmää niille hakijoille, jotka ovat suorittaneet opettajankoulutuksen ulkomailla.</p>
         <p>Tarjolla on 10 ja 13 kuukauden ryhmiä. Lyhyemmät 10 kuukauden ryhmät ovat tarkoitettu opiskelijoille, jotka ovat jo aiemmin suorittaneet kasvatustieteelliset perusopinnot. Ohjelmat eivät siten sisällä kasvatustieteellisiä perusopintoja ja opintojen laajuus on 47 opintopistettä. Pidemmät 13 kuukauden toteutusryhmät ovat tarkoitettu puolestaan opiskelijoille, jotka suorittavat kasvatustieteelliset perusopinnot osana opettajankoulutusta. Lyhyemmät ryhmät aloittavat opinnot elokuussa 2023, ja pidemmät ryhmät toukokuussa 2023.</p>
 
-    <h3>Ammatillinen erityisopettajankoulutus</h3>
+    <h3 id="h3eropettaja" >Ammatillinen erityisopettajankoulutus</h3>
         <p>Ammatillinen erityisopettajankoulutus toteutetaan hybriditoteutuksena ja opinnot voi tehdä työn ohessa opiskellen. Hybriditoteutus tarkoittaa, että opiskelija voi valita, osallistuuko hän koulutuksen lähipäivään verkon kautta vai Hämeenlinnassa. Osa lähipäivistä toteutetaan vain lähiopetuksena. Tarjolla on 13 kuukauden ryhmä. Opinnot alkavat toukokuussa 2023.</p>
     
-    <h3>Ammatillinen opinto-ohjaajankoulutus</h3>
+    <h3 id="h3opintoopettaja" >Ammatillinen opinto-ohjaajankoulutus</h3>
         <p>Opinnot on mahdollista suorittaa työn ohessa opiskellen joustavalla tavalla hybriditoteutuksena Hämeenlinnan ryhmässä, jossa on mahdollista osallistua työpajapäiviin myös verkon kautta. Opintojen kesto määrittyy aikaisemman osaamisen ja henkilökohtaisen kehittymissuunnitelman perusteella. Opinnot alkavat toukokuussa 2023.</p>
         <p><em>Lue lisää koulutuksistamme osoitteessa <a href="https://www.hamk.fi/aokk/" target="_blank">www.hamk.fi/aokk</a></em></p>
 
