exercise 4 final edits

--- a/exercise4.html
+++ b/exercise4.html
@@ -16,11 +16,11 @@
       </header>
 
       <div id="sidenav">
-        <h2>side bar</h2>
-        <h2>side bar</h2>
-        <h2>side bar</h2>
-        <h2>side bar</h2>
-        <h2>side bar</h2>
+        <h2 id="h2bar">side bar</h2>
+        <h2 id="h2bar">side bar</h2>
+        <h2 id="h2bar">side bar</h2>
+        <h2 id="h2bar">side bar</h2>
+        <h2 id="h2bar">side bar</h2>
       </div>
 
       <section>
