exercise 4 final touches

--- a/exercise4.html
+++ b/exercise4.html
@@ -16,11 +16,11 @@
       </header>
 
       <div id="sidenav">
-        <h2 id="h2bar">side bar</h2>
-        <h2 id="h2bar">side bar</h2>
-        <h2 id="h2bar">side bar</h2>
-        <h2 id="h2bar">side bar</h2>
-        <h2 id="h2bar">side bar</h2>
+        <h2 id="h2bar1">side bar</h2>
+        <h2 id="h2bar2">side bar</h2>
+        <h2 id="h2bar3">side bar</h2>
+        <h2 id="h2bar4">side bar</h2>
+        <h2 id="h2bar5">side bar</h2>
       </div>
 
       <section>
