--- a/exercise5.html
+++ b/exercise5.html
@@ -6,11 +6,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap Example</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="css/style-ex5.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+    <div class="container">
+    <header class="row">
+        <nav class="navbar navbar-expand-lg red" data-bs-theme="dark">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Navbar</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index.html" target="_blank">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Dropdown
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled">Disabled</a>
+                  </li>
+                </ul>
+                <form class="d-flex" role="search">
+                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+              </div>
+            </div>
+          </nav>
+    </header>
+
+<main class="row">
+    <div class="col-4" id="col1">
     <h1>Hello World!</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod asperiores suscipit libero? Dolores at maiores dignissimos in deserunt consequatur a quam qui optio magnam veritatis corporis, nostrum officia earum molestias?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quam?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid a ex, eveniet temporibus hic ad delectus minus ullam dolore voluptatum quaerat sint praesentium nemo suscipit accusamus molestiae beatae aspernatur alias explicabo eos nulla. Ullam magni repellat atque totam quo debitis doloribus modi, porro esse aut ab tempore qui voluptate praesentium earum corrupti culpa dolorum vel unde rerum neque iste dicta iusto. Quas accusantium sunt libero officia velit quo, saepe accusamus atque! Magni natus sapiente asperiores labore omnis! Ea, earum hic. Ab placeat, officia aspernatur esse necessitatibus voluptatibus ipsum magnam iusto sint, inventore ullam dolorem illo natus? Odit eaque nobis, laudantium cum facere et odio necessitatibus quo laboriosam nemo exercitationem autem voluptatum perspiciatis repudiandae modi corporis impedit veniam nesciunt dignissimos? Aliquam exercitationem rem excepturi necessitatibus enim perspiciatis cumque impedit fugiat magnam officiis veritatis, delectus eaque. Quidem maiores illum explicabo est, reprehenderit doloremque consequuntur? Voluptates est vel suscipit amet aperiam, perferendis quaerat.
+    </p>
+</div>
+<div class="col-4" id="col2">
+    <h1>Hello World!</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam, eveniet commodi corporis pariatur repellendus deleniti esse, suscipit aliquam maxime, soluta ratione magnam. Explicabo obcaecati quod reprehenderit dicta nobis quidem tenetur corrupti nisi beatae? Eius facilis aliquid rem assumenda illum necessitatibus consectetur, earum architecto, ea mollitia doloribus error, esse dolore cumque distinctio. Ducimus ex distinctio praesentium qui ad rerum sequi quibusdam totam. Repellendus laudantium at ea beatae laboriosam quo cupiditate deleniti dolor, asperiores, in voluptatibus mollitia cum optio possimus vel eos dolorum praesentium, odit dignissimos nostrum unde dolore exercitationem? Porro laudantium illo praesentium voluptates ullam, quis quibusdam blanditiis vitae laboriosam quaerat dignissimos ducimus ab cupiditate recusandae. In, autem deserunt exercitationem nostrum porro accusamus reprehenderit consectetur nemo hic officia quos et voluptates possimus aut maxime velit amet ipsum accusantium quae nihil non fuga sed eveniet alias. Sit incidunt consequuntur, quibusdam mollitia amet ex voluptas. Excepturi reiciendis natus accusantium, vitae dignissimos vero corrupti!</p>
+</div>
+
+<div class="col-4" id="col3">
+    <h1>Hello World!</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos possimus non voluptates officiis voluptatibus ab asperiores nostrum numquam, dolorum deleniti dicta eum architecto ducimus soluta. Reprehenderit, delectus! Magni animi hic sint vel fuga dolorem nesciunt. Ea, ullam ipsa natus deleniti assumenda magni quam repudiandae dolorem voluptatem nisi doloribus eligendi, laborum iure. Laboriosam possimus perspiciatis pariatur deserunt et. Laboriosam, aliquid earum, repellendus voluptas voluptatum sed in ab nihil dicta reiciendis debitis dolore. Quidem laboriosam sit modi commodi nobis inventore reprehenderit quae ratione harum ipsum numquam officiis doloribus impedit placeat aspernatur, sapiente alias consequuntur iusto a animi, laudantium error repellendus neque fuga. Minus asperiores expedita, sed reprehenderit possimus eaque. Error voluptas magnam commodi reiciendis, dolores tempore ipsa, illum officiis fugit quasi sed unde facilis? Eius suscipit fugiat aut nesciunt reprehenderit dolores dolorum repellat repellendus, officia facilis eos magni maiores commodi quisquam quidem iure sapiente magnam reiciendis, aliquam voluptatibus corporis corrupti incidunt error?</p>
+</div>
+</main>
+
+<footer class="row"> <p>ଘ(੭ ˘ ᵕ˘)━☆ﾟ.*･｡ﾟᵕ꒳ᵕ~</p> </footer>
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
